--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -9,7 +9,10 @@
     align-items: center;
     justify-content: space-between;
     .logo {
-      color: white;
+      .link {
+        text-decoration: none;
+        color: white;
+      }
     }
 
     .burger {
