--- a/src/App/Layout/Admin/style.module.scss
+++ b/src/App/Layout/Admin/style.module.scss
@@ -22,6 +22,12 @@
       border: 1px solid gray;
     }
 
+    .error {
+      margin-bottom: 10px;
+      color: red;
+      text-align: center;
+    }
+
     button {
       width: 100%;
       letter-spacing: 5px;
