--- a/src/App/Layout/Main/components/Card/style.module.scss
+++ b/src/App/Layout/Main/components/Card/style.module.scss
@@ -40,6 +40,12 @@
           border-radius: 5px;
         }
 
+        .error {
+          margin-bottom: 10px;
+          color: red;
+          text-align: center;
+        }
+
         button {
           background: #4087fb;
           width: 100%;
